add number in mibile menu

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,10 @@
 						<li class="menu-mobile__item"><a class="menu-mobile__link" href="#">Заказать</a>
 						</li>
 					</ul>
+					<div class="menu-mobile__phone-block"><a class="menu-mobile__number" href="tel:+74951084614">+7 (495) <span>108-46-14</span></a>
+						<div class="menu-mobile__time">с 09:00 до 22:00
+						</div>
+					</div>
 					<div class="text-right"></div>
 				</div>
 			</div>
@@ -90,6 +94,10 @@
 									<li class="top-nav__item"><a class="top-nav__link" href="#">Заказать</a>
 									</li>
 								</ul>
+								<div class="top-nav__phone-block"><a class="top-nav__number" href="tel:+74951084614">+7 (495) <span>108-46-14</span></a>
+									<div class="top-nav__time">с 09:00 до 22:00
+									</div>
+								</div>
 							</div>
 							<div class="top-nav__phone-col">
 								<div class="top-nav__phone-block"><a class="top-nav__number" href="tel:+74951084614">+7 (495) <span>108-46-14</span></a>
