--- a/public/index.html
+++ b/public/index.html
@@ -301,14 +301,14 @@
 			</section>
 			<!-- end s-offer-->
 			<!-- start s-garant-->
-			<section class="s-garant section" id="s-garant">
+			<div class="s-garant section" id="s-garant">
 				<div class="container">
 					<div class="s-garant__main-block">
 						<div class="s-garant__text">Официальная справка для соревнований на Ваше имя будет зафиксирована в общем документообороте системы здравоохранения. Документ выдержит любые проверки, в том числе и запросы по факсу.
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end s-garant-->
 			<!-- start s-plus-->
 			<section class="s-plus bg-wrap section" id="s-plus">
@@ -679,7 +679,7 @@
 									<div class="form-wrap__input-wrap"><input class="form-wrap__input" type="text" placeholder="Введите номер телефона*" name="text"/>
 									</div>
 									<!-- +e.input-wrap-->
-									<div class="form-wrap__input-wrap"><input class="form-wrap__input" type="texarea" placeholder="Место достаки (станция метро или адрес), джелаемое время" name="texarea"/>
+									<div class="form-wrap__input-wrap"><textarea class="form-wrap__input form-control" placeholder="Место достаки (станция метро или адрес), джелаемое время" name="textarea"></textarea>
 									</div>
 									<!-- +e.input-wrap-->
 									<button class="form-wrap__btn btn" type="submit">Оформить заявку
@@ -952,7 +952,7 @@
 							</div>
 						</div>
 						<div class="col-xl col-md-6 order-md-last">
-							<div class="s-contact__map-block"><iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A1bf0de8e03fa9fb38de02c71bbd4bb643cffa243a76c42153c8df8bfdd80198b&amp;source=constructor" width="405" height="360" frameborder="0"></iframe>
+							<div class="s-contact__map-block"><iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A1bf0de8e03fa9fb38de02c71bbd4bb643cffa243a76c42153c8df8bfdd80198b&amp;source=constructor" width="405" height="360"></iframe>
 							</div>
 						</div>
 						<div class="col-xl-auto col-md-6">
