--- a/public/index.html
+++ b/public/index.html
@@ -544,7 +544,7 @@
 			</section>
 			<!-- end s-how-work-->
 			<!-- start s-rew-->
-			<section class="s-rew bg-wrap section" id="s-rew"><div class="parallax-window" data-parallax="scroll" data-image-src="/img/@2x/rew-bg.jpg"></div>
+			<section class="s-rew bg-wrap section" id="s-rew"><div class="parallax-window" data-parallax="scroll" data-image-src="img/@2x/rew-bg.jpg"></div>
 				<div class="container">
 					<h2> <span>Отзывы клиентов </span>о нашей работе*</h2>
 					<div class="s-rew__slider s-rew__slider--js">
@@ -694,7 +694,7 @@
 			</section>
 			<!-- end s-order-->
 			<!-- start s-list-->
-			<section class="s-list bg-wrap section" id="s-list"><div class="parallax-window" data-parallax="scroll" data-image-src="/img/@2x/list-bg.jpg"></div>
+			<section class="s-list bg-wrap section" id="s-list"><div class="parallax-window" data-parallax="scroll" data-image-src="img/@2x/list-bg.jpg"></div>
 				<div class="container">
 					<h2>ДРУГИЕ СПРАВКИ <span>КОТОРЫЕ МЫ ОФОРМЛЯЕМ</span></h2>
 					<div class="s-list__subtitle">Мы предлагаем только официальные документы, которые не вызовут вопросов при проверке и не создадут вам никаких сложностей. <br>Мы оформляем любые медицинские справки. В этом списке представлены только наиболее популярные.
