--- a/public/index.html
+++ b/public/index.html
@@ -32,21 +32,21 @@
 				</div>
 				<div class="menu-mobile__inner">
 					<ul class="menu-mobile__nav fixed-nav">
-						<li class="menu-mobile__item"><a class="menu-mobile__link" href="#">Главная</a>
+						<li class="menu-mobile__item"><a class="menu-mobile__link scroll-link" href="#header-block">Главная</a>
 						</li>
-						<li class="menu-mobile__item"><a class="menu-mobile__link" href="#">Почему мы</a>
+						<li class="menu-mobile__item"><a class="menu-mobile__link scroll-link" href="#s-offer">Почему мы</a>
 						</li>
-						<li class="menu-mobile__item"><a class="menu-mobile__link" href="#">Доставка</a>
+						<li class="menu-mobile__item"><a class="menu-mobile__link scroll-link" href="#s-today">Доставка</a>
 						</li>
-						<li class="menu-mobile__item"><a class="menu-mobile__link" href="#">Как мы работаем</a>
+						<li class="menu-mobile__item"><a class="menu-mobile__link scroll-link" href="#s-how-work">Как мы работаем</a>
 						</li>
-						<li class="menu-mobile__item"><a class="menu-mobile__link" href="#">Справки</a>
+						<li class="menu-mobile__item"><a class="menu-mobile__link scroll-link" href="#s-list">Справки</a>
 						</li>
-						<li class="menu-mobile__item"><a class="menu-mobile__link" href="#">Отзывы</a>
+						<li class="menu-mobile__item"><a class="menu-mobile__link scroll-link" href="#s-rew">Отзывы</a>
 						</li>
-						<li class="menu-mobile__item"><a class="menu-mobile__link" href="#">Контакты</a>
+						<li class="menu-mobile__item"><a class="menu-mobile__link scroll-link" href="#s-contact">Контакты</a>
 						</li>
-						<li class="menu-mobile__item"><a class="menu-mobile__link" href="#">Заказать</a>
+						<li class="menu-mobile__item"><a class="menu-mobile__link scroll-link" href="#s-order">Заказать</a>
 						</li>
 					</ul>
 					<div class="menu-mobile__phone-block"><a class="menu-mobile__number" href="tel:+74951084614">+7 (495) <span>108-46-14</span></a>
@@ -67,31 +67,31 @@
 							</div>
 							<div class="top-nav__mnu-col">
 								<ul class="top-nav__nav static-nav">
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Почему мы</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-offer">Почему мы</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Доставка</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-today">Доставка</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Отзывы</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-rew">Отзывы</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Контакты</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-contact">Контакты</a>
 									</li>
 								</ul>
 								<ul class="top-nav__nav fixed-nav">
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Главная</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#header-block">Главная</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Почему мы</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-offer">Почему мы</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Доставка</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-today">Доставка</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Как мы работаем</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-how-work">Как мы работаем</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Справки</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-list">Справки</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Отзывы</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-rew">Отзывы</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Контакты</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-contact">Контакты</a>
 									</li>
-									<li class="top-nav__item"><a class="top-nav__link" href="#">Заказать</a>
+									<li class="top-nav__item"><a class="top-nav__link scroll-link" href="#s-order">Заказать</a>
 									</li>
 								</ul>
 								<div class="top-nav__phone-block"><a class="top-nav__number" href="tel:+74951084614">+7 (495) <span>108-46-14</span></a>
@@ -143,7 +143,7 @@
 									<div class="header-block__text">ОФИЦИАЛЬНЫЙ ДОКУМЕНТ, заполненный в соответствии с&nbsp;Вашими требованиями, указанными в заявке.
 									</div>
 								</div>
-							</div><a class="header-block__btn" href="#">Заказать справку</a>
+							</div><a class="header-block__btn scroll-link" href="#s-form">Заказать справку</a>
 						</div>
 					</div>
 				</div>
@@ -288,7 +288,7 @@
 					<div class="s-offer__text s-offer__text--white">Достаточно заполнить заявку прямо на сайте или позвонить по указанному номеру и СПРАВКА&nbsp;ДЛЯ СОРЕВНОВАНИЙ будет у Вас на&nbsp;руках <strong>в течение суток !</strong>
 					</div>
 					<div class="row">
-						<div class="col-md"><a class="s-offer__btn btn" href="#">Заказать справку</a>
+						<div class="col-md"><a class="s-offer__btn btn scroll-link" href="#s-order">Заказать справку</a>
 						</div>
 						<div class="col-md-auto">
 							<div class="s-offer__or">или
@@ -410,7 +410,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-md-6"><a class="s-plus__btn btn" href="#">Заказать справку на спорт</a>
+									<div class="col-md-6"><a class="s-plus__btn btn scroll-link" href="#s-order">Заказать справку на спорт</a>
 									</div>
 								</div>
 							</div>
@@ -501,7 +501,7 @@
 								</div>
 								<p>чтобы заказать справку</p>
 								<p>с 09:00 - 22:00</p><a class="s-how-work__phone" href="tel:+74951084614">+7 (495) <span>108-46-14</span></a>
-								<p>или оформляете заявку с сайта</p><a class="s-how-work__btn btn" href="#">Оформить заявку</a>
+								<p>или оформляете заявку с сайта</p><a class="s-how-work__btn btn scroll-link" href="#s-order">Оформить заявку</a>
 								<div class="s-how-work__light-text">Прием заявок через форму заказа осуществляется ежедневно без выходных и праздничных дней. Круглосуточно.
 								</div>
 							</div>
