--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 				<div class="top-nav static-style block-with-lazy">
 					<div class="container">
 						<div class="row">
-							<div class="top-nav__img-col"><a class="top-nav__title-block" href="#"><span class="top-nav__title"><img class="top-nav__fixed-img res-i" src="img/@2x/logo.png" alt="" role="presentation"/><img class="top-nav__static-img res-i" src="img/@2x/static-top.jpg" alt="" role="presentation"/></span><span class="top-nav__subtitle">Для соревнований</span></a>
+							<div class="top-nav__img-col"><a class="top-nav__title-block" href="#"><span class="top-nav__title"><span class="top-nav__fixed-title logo-title">spravka<span>sport.net</span></span><span class="top-nav__static-title logo-title">spravka<span>sport.net</span></span></span><span class="top-nav__subtitle">Для соревнований</span></a>
 							</div>
 							<div class="top-nav__mnu-col">
 								<ul class="top-nav__nav static-nav">
@@ -952,7 +952,7 @@
 							</div>
 						</div>
 						<div class="col-xl col-md-6 order-md-last">
-							<div class="s-contact__map-block"><iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A1bf0de8e03fa9fb38de02c71bbd4bb643cffa243a76c42153c8df8bfdd80198b&amp;source=constructor" width="405" height="360"></iframe>
+							<div class="s-contact__map-block"><img class="res-i" src="img/@2x/map.jpg" alt=""/>
 							</div>
 						</div>
 						<div class="col-xl-auto col-md-6">
@@ -981,7 +981,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-auto col"><a href="#">
-								<div class="footer__title"><img class="res-i" src="img/@2x/footer-logo.jpg" alt=""/>
+								<div class="footer__logo-title">spravka<span>sport.net</span>
 								</div>
 								<div class="footer__subtitle">Для соревнований
 								</div></a></div>
